tests/paczka1/fuzzy1/33538267.err
Error in line 12: b5L0ZT5F A904 361,6
Error in line 20: A904 A904 25,0
Error in line 21: wmYvWhNDlt S119 9,0
Error in line 31: wmYvWhNDlt S5 66,7
